(library
 (name ppx_implicits_ocaml_typing)
 (public_name ppx_implicits.ocaml.typing)
 (modules_without_implementation annot outcometree lambda debuginfo)
 (flags
  (:standard
   -w
   -9
   -open
   Ppx_implicits_ocaml_utils
   -open
   Ppx_implicits_ocaml_stdlib
   -open
   Ppx_implicits_ocaml_parsing))
 (libraries
  ocaml-migrate-types
  ppx_implicits_ocaml_utils
  ppx_implicits_ocaml_stdlib
  ppx_implicits_ocaml_parsing)
 (preprocess
  (pps ppx_optcomp)))
